--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
-assets/
+assets/Fylo-landing-page-info/fylo-landing-page-with-two-column-layout-figma
+assets/Fylo-landing-page-info/fylo-landing-page-with-two-column-layout-figma.zip
+assets/Fylo-landing-page-info/fylo-landing-page-with-two-column-layout-master.zip
